--- a/app/src/main/res/layout/content_menu_main.xml
+++ b/app/src/main/res/layout/content_menu_main.xml
@@ -18,6 +18,9 @@
         tools:context="com.pelicanus.insight.MenuMainActivity"
         tools:showIn="@layout/app_bar_menu_main">
 
+
+        <!--Reminder section-->
+
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -38,8 +41,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Friendly reminder of your excursions"
-                    android:textSize="15sp"
+                    android:text="@string/friendly_reminder"
+                    android:textSize="17sp"
                     android:layout_gravity="center"
                     android:layout_margin="10dp"/>
 
@@ -58,14 +61,14 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Participate in"
+                        android:text="@string/participate_in"
                         android:gravity="center"
                         android:layout_weight="1"/>
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Organize"
+                        android:text="@string/organize"
                         android:gravity="center"
                         android:layout_weight="1"/>
 
@@ -75,7 +78,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
+                    <!--Number of your excursions section-->
+
                     <TextView
+                        android:id="@+id/excursions_participate_stat"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -85,6 +91,7 @@
                         android:textColor="@color/colorPrimary"/>
 
                     <TextView
+                        android:id="@+id/excursions_organize_stat"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -96,10 +103,11 @@
                 </LinearLayout>
 
                 <Button
+                    android:id="@+id/excursions_stat_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="More info"
+                    android:text="@string/more_info"
                     android:clickable="true"
                     android:focusable="true"
                     android:layout_marginBottom="10dp"/>
@@ -107,6 +115,9 @@
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
+
+
+        <!--Guide buttons section-->
 
 
        <LinearLayout
@@ -117,11 +128,13 @@
             android:layout_margin="10dp">
 
             <android.support.v7.widget.CardView
+                android:id="@+id/goto_create_excursion_button"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:layout_margin="10dp"
-                android:clickable="true">
+                android:clickable="true"
+                android:focusable="true">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -140,7 +153,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Create"
+                        android:text="@string/create"
                         android:textSize="15sp"
                         android:layout_margin="4dp"/>
 
@@ -153,7 +166,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Share your experience"
+                        android:text="@string/share_your_experience"
                         android:layout_margin="7dp"/>
 
                 </LinearLayout>
@@ -161,11 +174,13 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
+                android:id="@+id/goto_search_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_margin="10dp"
-                android:clickable="true">
+                android:clickable="true"
+                android:focusable="true">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -183,7 +198,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Explore"
+                        android:text="@string/explore"
                         android:layout_gravity="center"
                         android:textSize="15sp"
                         android:layout_margin="4dp"/>
@@ -197,12 +212,149 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Find your way"
+                        android:text="@string/find_your_way"
                         android:layout_margin="7dp"/>
 
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
+
+        </LinearLayout>
+
+
+        <!--Recently added section-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginBottom="25dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/recently_added"
+                android:layout_margin="10dp"
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textAllCaps="true"/>
+
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@color/white">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/ra_excursion_1_img"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="10dp"
+                                android:layout_gravity="center"
+                                android:src="@drawable/city_zaglushka"/>
+
+                            <TextView
+                                android:id="@+id/ra_excursion_1_name"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="start"
+                                android:gravity="bottom"
+                                android:text="Excursion name"
+                                android:textSize="14sp"
+                                android:textColor="@android:color/black"
+                                android:layout_margin="5dp"/>
+
+                        </LinearLayout>
+
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/ra_excursion_2_img"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="10dp"
+                                android:layout_gravity="center"
+                                android:src="@drawable/city_zaglushka"/>
+
+                            <TextView
+                                android:id="@+id/ra_excursion_2_name"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="start"
+                                android:gravity="bottom"
+                                android:text="Excursion name2"
+                                android:textSize="14sp"
+                                android:textColor="@android:color/black"
+                                android:layout_margin="5dp"/>
+
+                        </LinearLayout>
+
+                    </android.support.v7.widget.CardView>
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/ra_excursion_3_img"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="10dp"
+                                android:layout_gravity="center"
+                                android:src="@drawable/city_zaglushka"/>
+
+                            <TextView
+                                android:id="@+id/ra_excursion_3_name"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="start"
+                                android:gravity="bottom"
+                                android:text="Excursion name3"
+                                android:textSize="14sp"
+                                android:textColor="@android:color/black"
+                                android:layout_margin="5dp"/>
+
+                        </LinearLayout>
+
+                    </android.support.v7.widget.CardView>
+
+                </LinearLayout>
+
+            </HorizontalScrollView>
+
 
         </LinearLayout>
 
