--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,7 +97,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="To main menu"
-                    android:onClick="OpenMainMenu"/>
+                    android:onClick="OpenMenuMain"/>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
