--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -35,14 +35,16 @@
             android:maxLines="2"/>
 
         <LinearLayout
+            android:id="@+id/ex_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Date"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/exc_date"
