--- a/app/src/main/res/layout/activity_create_trip.xml
+++ b/app/src/main/res/layout/activity_create_trip.xml
@@ -24,10 +24,13 @@
 
             <ImageView
                 android:id="@+id/trip_avatar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="400dp"
+                android:layout_height="228dp"
                 android:layout_marginTop="60dp"
-                android:foregroundGravity="center" />
+                android:layout_marginHorizontal="20dp"
+                android:foregroundGravity="center"
+                android:scaleType="centerCrop"
+                android:src="@drawable/excursion_zaglushka" />
 
         </RelativeLayout>
 
