--- a/app/src/main/res/layout/activity_excursion_view.xml
+++ b/app/src/main/res/layout/activity_excursion_view.xml
@@ -29,22 +29,30 @@
             android:gravity="center_horizontal"
             android:textSize="20sp"/>
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/view_author_image"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@mipmap/ic_launcher_round"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="15dp"/>
-
-        <TextView
-            android:id="@+id/view_author_name"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Author name"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/white"/>
+            android:orientation="vertical"
+            android:layout_gravity="center_horizontal">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/view_author_image"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/avatar_default"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="15dp"/>
+
+            <TextView
+                android:id="@+id/view_author_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="Author name"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/white"/>
+
+        </LinearLayout>
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -107,9 +115,36 @@
                     android:textColor="@android:color/black"
                     android:text="@string/language"/>
 
+                <TextView
+                    android:id="@+id/view_language"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="15dp"
+                    android:layout_marginBottom="15dp"
+                    android:text="Ukrainian"/>
+
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
+
+        <TextView
+            android:id="@+id/view_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/white"
+            android:layout_marginTop="15dp"
+            android:text="Waiting for a group"
+            />
+
+        <TextView
+            android:id="@+id/view_participants"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/white"
+            android:text="8 / 10 participants"
+            />
 
         <Button
             android:layout_width="wrap_content"
