--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,15 +7,17 @@
 
     <ImageView
         android:id="@+id/exc_image"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp"
-        android:src="@drawable/city_zaglushka"/>
+        android:src="@drawable/city_zaglushka"
+        android:layout_weight="2"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_weight="1">
 
         <TextView
             android:id="@+id/exc_name"
@@ -30,14 +32,15 @@
             android:id="@+id/exc_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:maxLines="2"
+            android:maxLines="3"
             android:paddingTop="5dp"
             android:text="Description" />
 
         <LinearLayout
             android:id="@+id/ex_date"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp">
 
             <TextView
 
