--- a/app/src/main/res/layout/activity_create_trip.xml
+++ b/app/src/main/res/layout/activity_create_trip.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,8 +25,8 @@
                 android:id="@+id/trip_avatar"
                 android:layout_width="400dp"
                 android:layout_height="228dp"
-                android:layout_marginTop="60dp"
                 android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="60dp"
                 android:foregroundGravity="center"
                 android:scaleType="centerCrop"
                 android:src="@drawable/excursion_zaglushka" />
@@ -53,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
@@ -61,6 +60,7 @@
                 android:layout_weight="3"
                 android:text="Name"
                 android:textAllCaps="true" />
+
             <EditText
                 android:id="@+id/text_nametrip"
                 android:layout_width="match_parent"
@@ -76,7 +76,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
@@ -84,6 +85,7 @@
                 android:layout_weight="3"
                 android:text="Description"
                 android:textAllCaps="true" />
+
             <EditText
                 android:id="@+id/text_description"
                 android:layout_width="match_parent"
@@ -100,7 +102,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
@@ -110,12 +112,12 @@
                 android:textAllCaps="true" />
 
             <DatePicker
+                android:id="@+id/DatePicker"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:layout_weight="1"
                 android:calendarViewShown="false"
                 android:datePickerMode="spinner"
-                android:id="@+id/DatePicker"
                 android:spinnersShown="true" />
 
         </LinearLayout>
@@ -125,7 +127,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
