--- a/app/src/main/res/layout/activity_trip_list.xml
+++ b/app/src/main/res/layout/activity_trip_list.xml
@@ -12,6 +12,9 @@
         android:id="@+id/trip_list"
         android:layout_width="match_parent"
         android:clickable="true"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"
+        android:layout_margin="15dp"
+        android:background="@color/white"
+        android:padding="5dp" ></android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
