--- a/app/src/main/res/layout/nav_header_menu_main.xml
+++ b/app/src/main/res/layout/nav_header_menu_main.xml
@@ -12,14 +12,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageButton
+    <at.markushi.ui.CircleButton
         android:id="@+id/user_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="TODO"
         android:onClick="OpenProfile"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@mipmap/ic_launcher"
+        app:cb_color="#99CC00"
+        app:cb_pressedRingWidth="8dip" />
 
     <TextView
         android:id="@+id/navdr_username_label"
