--- a/app/src/main/res/layout/activity_create_trip.xml
+++ b/app/src/main/res/layout/activity_create_trip.xml
@@ -26,9 +26,9 @@
                 android:id="@+id/trip_avatar"
                 android:layout_width="400dp"
                 android:layout_height="228dp"
-                android:layout_marginTop="60dp"
                 android:layout_marginHorizontal="20dp"
-                android:foregroundGravity="center_horizontal"
+                android:layout_marginTop="60dp"
+                android:foregroundGravity="center"
                 android:scaleType="centerCrop"
                 android:src="@drawable/excursion_zaglushka" />
 
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
@@ -75,7 +75,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
@@ -101,7 +102,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
@@ -160,6 +161,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:text="Meeting point"
+                android:orientation="vertical"
                 android:textAllCaps="true"
                 android:textSize="12sp"/>
 
@@ -170,6 +172,7 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="Trip Location"
+                android:orientation="vertical"
                 android:inputType="textCapSentences|textMultiLine" />
 
         </LinearLayout>
@@ -180,7 +183,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="15dp"
-            android:onClick="onCreate()"
             android:text="@string/trip_create" />
 
     </LinearLayout>
