--- a/app/src/main/res/layout/nav_header_menu_main.xml
+++ b/app/src/main/res/layout/nav_header_menu_main.xml
@@ -10,18 +10,17 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    >
 
-    <at.markushi.ui.CircleButton
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/this_user_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="TODO"
         android:onClick="OpenProfile"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@mipmap/ic_launcher"
-        app:cb_color="#99CC00"
-        app:cb_pressedRingWidth="8dip" />
+        android:src="@mipmap/ic_launcher"/>
 
     <TextView
         android:id="@+id/navdr_username_label"
@@ -29,11 +28,13 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/username_nav_placeholder"
+        android:textColor="@color/white"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/navdr_ueremail_label"
         android:layout_width="wrap_content"
+        android:textColor="@color/white"
         android:layout_height="wrap_content"
         android:text="@string/useremail_nav_placeholder" />
 
