--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:padding="10dp"
         android:src="@drawable/city_zaglushka"
+        android:layout_gravity="start"
         android:layout_weight="2"/>
 
     <LinearLayout
@@ -32,15 +33,15 @@
             android:id="@+id/exc_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:maxLines="3"
+            android:maxLines="2"
             android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:text="Description" />
 
         <LinearLayout
             android:id="@+id/ex_date"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="10dp">
+            android:layout_height="wrap_content">
 
             <TextView
 
@@ -51,6 +52,26 @@
 
             <TextView
                 android:id="@+id/exc_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ex_lang"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp">
+
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Language"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/exc_lang"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
